--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
 six
 tqdm==4.30.*
 torch>=1.1
-git+https://github.com/pytorch/text.git@master#wheel=torchtext
+torchtext==0.8.1
 future
 configargparse
+iopath
+numpy
+pandas
+spacy
+networkx
+git+https://github.com/boudinfl/pke.git
+wandb
+git+https://github.com/huggingface/transformers
+matplotlib
+nltk
+fairseq
